Fix an issue in jumping

--- a/src/components/passphrase/safekeeping/safekeeping.css
+++ b/src/components/passphrase/safekeeping/safekeeping.css
@@ -187,6 +187,7 @@
 
 @media (--small-viewport) {
   .safekeeping {
+    &.done-step,
     &.revealing-step,
     &.revealed-step {
       overflow-y: scroll;
